--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mocha": "^3.2.0",
     "mocha-sinon": "^1.2.0",
     "sinon": "^1.17.7",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "yargs": "^7.0.2"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
